--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="..//website.me//src//assets/lightning-bolt-thunder-icon-logo-abstract-volt-electric-isolated-vector (Edited).jpg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/lightning-bolt-thunder-icon-logo-abstract-volt-electric-isolated-vector (Edited).jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>shiv</title>
   </head>
